[project]
name = "base64c"
version = "0.0.9"
description = "Fast Base64 encoding/decoding with SSE2 and VSX optimizations"
authors = [{name = "Oscar Bahamonde", email = "oscar.bahamonde@indiecloud.co"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
readme = "README.md"

[tool.poetry]
name = "base64c"
version = "0.0.9"
description = "Fast Base64 encoding/decoding with SSE2 and VSX optimizations."
authors = ["obahamonde <oscar.bahamonde@indiecloud.co>"]
readme = "README.md"
packages = [{include = "base64c", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[project.optional-dependencies]
dev = ["pytest", "pyright", "isort", "black","pytest-html","setuptools"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["base64c"]
package-dir = {"base64c" = "src/base64c"}

[tool.setuptools.package-data]
base64c = ["*.pyi"]

[tool.setuptools_scm]